@@ -1128,65 +1128,53 @@ SimplyZhao &lt;simplyzhao@gmail.com&gt;</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="menuitem2">
+      <object class="GtkImageMenuItem" id="menu-play">
+        <property name="label">gtk-media-play</property>
         <property name="visible">True</property>
-        <property name="label" translatable="yes">_Player control</property>
         <property name="use_underline">True</property>
-        <child type="submenu">
-          <object class="GtkMenu" id="menu1">
-            <property name="visible">True</property>
-            <child>
-              <object class="GtkImageMenuItem" id="menu-play">
-                <property name="label">gtk-media-play</property>
-                <property name="visible">True</property>
-                <property name="use_underline">True</property>
-                <property name="use_stock">True</property>
-                <property name="accel_group">accelgroup1</property>
-                <signal name="activate" handler="ol_menu_play"/>
-              </object>
-            </child>
-            <child>
-              <object class="GtkImageMenuItem" id="menu-pause">
-                <property name="label">gtk-media-pause</property>
-                <property name="visible">True</property>
-                <property name="use_underline">True</property>
-                <property name="use_stock">True</property>
-                <property name="accel_group">accelgroup1</property>
-                <signal name="activate" handler="ol_menu_pause"/>
-              </object>
-            </child>
-            <child>
-              <object class="GtkImageMenuItem" id="menu-stop">
-                <property name="label">gtk-media-stop</property>
-                <property name="visible">True</property>
-                <property name="use_underline">True</property>
-                <property name="use_stock">True</property>
-                <property name="accel_group">accelgroup1</property>
-                <signal name="activate" handler="ol_menu_stop"/>
-              </object>
-            </child>
-            <child>
-              <object class="GtkImageMenuItem" id="menu-prev">
-                <property name="label">gtk-media-previous</property>
-                <property name="visible">True</property>
-                <property name="use_underline">True</property>
-                <property name="use_stock">True</property>
-                <property name="accel_group">accelgroup1</property>
-                <signal name="activate" handler="ol_menu_prev"/>
-              </object>
-            </child>
-            <child>
-              <object class="GtkImageMenuItem" id="menu-next">
-                <property name="label">gtk-media-next</property>
-                <property name="visible">True</property>
-                <property name="use_underline">True</property>
-                <property name="use_stock">True</property>
-                <property name="accel_group">accelgroup1</property>
-                <signal name="activate" handler="ol_menu_next"/>
-              </object>
-            </child>
-          </object>
-        </child>
+        <property name="use_stock">True</property>
+        <property name="accel_group">accelgroup1</property>
+        <signal name="activate" handler="ol_menu_play"/>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="menu-pause">
+        <property name="label">gtk-media-pause</property>
+        <property name="visible">True</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+        <property name="accel_group">accelgroup1</property>
+        <signal name="activate" handler="ol_menu_pause"/>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="menu-stop">
+        <property name="label">gtk-media-stop</property>
+        <property name="visible">True</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+        <property name="accel_group">accelgroup1</property>
+        <signal name="activate" handler="ol_menu_stop"/>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="menu-prev">
+        <property name="label">gtk-media-previous</property>
+        <property name="visible">True</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+        <property name="accel_group">accelgroup1</property>
+        <signal name="activate" handler="ol_menu_prev"/>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="menu-next">
+        <property name="label">gtk-media-next</property>
+        <property name="visible">True</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+        <property name="accel_group">accelgroup1</property>
+        <signal name="activate" handler="ol_menu_next"/>
       </object>
     </child>
     <child>
