@@ -1,0 +1,8 @@
+#ifndef _OL_PLAYER_QUODLIBET_H_
+#define _OL_PLAYER_QUODLIBET_H_
+
+#include "ol_player.h"
+
+OlPlayerController* ol_player_quodlibet_get_controller ();
+
+#endif /* _OL_PLAYER_QUODLIBET_H_ */
