@@ -94,6 +94,31 @@ ol_dbus_get_uint (DBusGProxy *proxy, const gchar *method, guint *returnval)
 }
 
 gboolean
+ol_dbus_get_int64 (DBusGProxy *proxy, const gchar *method, gint64 *returnval)
+{
+  g_return_val_if_fail (proxy != NULL, FALSE);
+  g_return_val_if_fail (method != NULL, FALSE);
+  g_return_val_if_fail (returnval != NULL, FALSE);
+  GError *error = NULL;
+  if (dbus_g_proxy_call (proxy,
+                         method,
+                         &error,
+                         G_TYPE_INVALID,
+                         G_TYPE_INT64,
+                         returnval,
+                         G_TYPE_INVALID))
+  {
+    return TRUE;
+  }
+  else
+  {
+    fprintf (stderr, "call %s failed: %s\n", method, error->message);
+    g_error_free (error);
+    return FALSE;
+  }
+}
+
+gboolean
 ol_dbus_get_int (DBusGProxy *proxy, const gchar *method, gint *returnval)
 {
   g_return_val_if_fail (proxy != NULL, FALSE);
