@@ -27,6 +27,8 @@ gboolean ol_dbus_get_uint (DBusGProxy *proxy, const gchar *method, guint *return
 
 gboolean ol_dbus_get_int (DBusGProxy *proxy, const gchar *method, gint *returnval);
 
+gboolean ol_dbus_get_int64 (DBusGProxy *proxy, const gchar *method, gint64 *returnval);
+
 gboolean ol_dbus_get_uint8 (DBusGProxy *proxy, const gchar *method, guint8 *returnval);
 
 gboolean ol_dbus_get_bool (DBusGProxy *proxy, const gchar *method, gboolean *returnval);
